--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,8 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 
+html,body,div,span,nav{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+ol,ul{list-style:none;margin:0px;padding:0px;}
+.clear{clear:both;}
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}
+a{text-decoration:none;}
+.wrap{
+    width:80%;
+    margin:0 auto;
+    transition:all .2s linear;
+}
 
-body {margin-top: 25px;}
+/*----start-header-----*/
+.header{
+    background:#323A45;
+    border-bottom:2px solid #00B895;
+}
+.logo b {
+    color:#FFF;
+    font-size: 25px;
+    float: left;
+    padding:25px 0;
+}
+.top-nav{
+    float:right;
+}
+.top-nav ul li{
+    display:inline-block;
+    float:left;
+}
+.top-nav ul li a{
+    font-family: 'Roboto', sans-serif;
+    color: #d6d6d6;
+    padding: 40px 25px;
+    display: block;
+    position: relative;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    font-size: 0.875em;
+    position:relative;
+}
+.top-nav li.active a, .top-nav li a:hover {
+    color:#FFF;
+    background:#00B895;
+}
 
 .discover {
     text-align: center;
@@ -44,3 +90,15 @@ h2 {
     font-size: 50px;
     font-family: Balsamiq Sans;
 }
+
+
+
+
+
+
+
+
+
+
+
+
