--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 
+
 html,body,div,span,nav{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 ol,ul{list-style:none;margin:0px;padding:0px;}
 .clear{clear:both;}
@@ -21,9 +22,10 @@ a{text-decoration:none;}
 }
 .logo b {
     color:#FFF;
-    font-size: 25px;
+    font-size: 35px;
     float: left;
-    padding:25px 0;
+    padding:5px 0;
+    font-family: Lobster;
 }
 .top-nav{
     float:right;
@@ -67,6 +69,9 @@ button {
     font-size: 50px;
     font-family: Balsamiq Sans;
 }
+h1 {
+    text-align: center;
+}
 
 h2 {
     font-size: 80px;
@@ -91,7 +96,13 @@ h2 {
     font-family: Balsamiq Sans;
 }
 
-
+.para {
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-size: 18px;
+}
 
 
 
