--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -22,11 +22,11 @@ a{text-decoration:none;}
 }
 .logo b {
     color:#FFF;
-    font-size: 35px;
+    font-size: 33px;
     float: left;
     padding:5px 5;
     font-family: Lobster;
-    padding-top: 10px:
+    padding-top: 10px;
 }
 .top-nav{
     float:right;
@@ -105,7 +105,21 @@ h2 {
     font-size: 18px;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+}
+  
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
+.container {
+    padding: 2px 16px;
+  }
+
+  
 
 
 
